--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
     <groupId>com.example</groupId>
     <artifactId>SpringReactBaeldung</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>SpringReactBaeldung</name>
-    <description>SpringReactBaeldung</description>
+    <name>DucksNStuff</name>
+    <description>DucksNStuff</description>
     <properties>
         <java.version>17</java.version>
     </properties>
@@ -45,6 +45,19 @@
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>6.1.3.Final</version>
+            <type>pom</type>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.0</version>
+        </dependency>
 
     </dependencies>
 
