--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-bootstrap": "^2.5.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
+    "react-lorem-ipsum": "^1.4.10",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "reactstrap": "^8.10.0",
