--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-lorem-ipsum": "^1.4.10",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "react-use-cart": "^1.13.0",
     "reactstrap": "^8.10.0",
     "web-vitals": "^2.1.4"
   },
