--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,14 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@stripe/react-stripe-js": "^1.13.0",
+    "@stripe/stripe-js": "^1.42.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "5.1",
+    "flubber": "^0.4.2",
+    "framer-motion": "^7.6.1",
     "gapi-script": "^1.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
@@ -24,6 +28,7 @@
     "react-scripts": "5.0.1",
     "react-use-cart": "^1.13.0",
     "reactstrap": "^8.10.0",
+    "stripe": "^10.14.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
