--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "debug": "^4.3.1",
     "dotenv": "^8.2.0",
     "format-currency": "^1.0.0",
+    "howler": "^2.2.3",
     "micro": "^9.3.4",
     "microrouter": "^3.1.3",
     "nanoid": "^3.3.4",
